--- a/src/wlanedumain/wlanedumain.csproj
+++ b/src/wlanedumain/wlanedumain.csproj
@@ -42,8 +42,9 @@
     <Reference Include="HtmlAgilityPack, Version=1.6.5.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.6.5\lib\Net20\HtmlAgilityPack.dll</HintPath>
     </Reference>
-    <Reference Include="ManagedWifi">
-      <HintPath>..\..\bin\ManagedWifi.dll</HintPath>
+    <Reference Include="ManagedWifi, Version=1.0.0.0, Culture=neutral, PublicKeyToken=e54db72fe3e3a513, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\static\ManagedWifi.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -54,14 +55,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Login\ILogin.cs" />
-    <Compile Include="Login\ILogin2.cs" />
-    <Compile Include="Login\Implementation\LoginImplementation.cs" />
+    <Compile Include="IManagerPage.cs" />
+    <Compile Include="Login\ILoginFailedPage.cs" />
+    <Compile Include="Login\ILoginForcedPage.cs" />
+    <Compile Include="Login\ILoginInfoPage.cs" />
+    <Compile Include="Login\ILoginingPage.cs" />
+    <Compile Include="Login\ILoginSucceededPage.cs" />
+    <Compile Include="Login\Implementation\LoginForcedPage.cs" />
+    <Compile Include="Login\Implementation\LoginInfoPage.cs" />
+    <Compile Include="Login\Implementation\LoginingPage.cs" />
+    <Compile Include="Login\Implementation\LoginSucceededPage.cs" />
     <Compile Include="Login\LoginInfo.cs" />
+    <Compile Include="Logout\ILogoutFailedPage.cs" />
+    <Compile Include="Logout\ILogoutInfoPage.cs" />
+    <Compile Include="Logout\ILogoutingPage.cs" />
+    <Compile Include="Logout\ILogoutSucceededPage.cs" />
+    <Compile Include="Logout\Implementation\LogoutInfo.cs" />
+    <Compile Include="Logout\Implementation\LogoutInfoPage.cs" />
+    <Compile Include="Logout\Implementation\LogoutingPage.cs" />
+    <Compile Include="Logout\Implementation\LogoutSucceededPage.cs" />
+    <Compile Include="ManagerPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\ThisAssembly.cs" />
     <Compile Include="SamLu\Native\Wifi\WIFISSID.cs" />
     <Compile Include="SamLu\Native\Wifi\WifiWatcher.cs" />
     <Compile Include="SamLu\Web\HttpRequestUtil.cs" />
+    <Compile Include="Wlan_eduManager.cs" />
     <Compile Include="Wlan_eduNotConnectedException.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -70,8 +89,12 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)..\bin\"
+copy "$(TargetDir)$(TargetName).pdb" "$(SolutionDir)..\bin\"
+copy "$(TargetDir)$(TargetName).xml" "$(SolutionDir)..\bin\"
+
+copy "$(TargetDir)HtmlAgilityPack.*" "$(SolutionDir)..\bin\"
+copy "$(TargetDir)ManagedWifi.*" "$(SolutionDir)..\bin\"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>
