实现 DisconnectionWindow UI 界面
1. 实现 DisconnectionWindow UI 界面。
2. Bugs fix.

--- a/.gitignore
+++ b/.gitignore
@@ -177,6 +177,9 @@ PublishScripts/
 *.nuget.props
 *.nuget.targets
 
+# NutGet 包签名中间文件
+**/package-temp/*
+
 # Microsoft Azure Build Output
 csx/
 *.build.csdef
@@ -297,8 +300,3 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
-
-# include directories
-!/bin
-!/doc
-/bin/*
