--- a/src/BugReport/BugReport.csproj
+++ b/src/BugReport/BugReport.csproj
@@ -82,7 +82,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)..\bin\"
+    <PostBuildEvent>if not exist "$(SolutionDir)..\bin\" (md "$(SolutionDir)..\bin\")
+
+copy "$(TargetPath)" "$(SolutionDir)..\bin\"
 copy "$(TargetDir)$(TargetName).pdb" "$(SolutionDir)..\bin\"</PostBuildEvent>
   </PropertyGroup>
 </Project>
