--- a/src/wlanedumain/packages.config
+++ b/src/wlanedumain/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="HtmlAgilityPack" version="1.6.5" targetFramework="net35" />
+  <package id="HtmlAgilityPack" version="1.6.6" targetFramework="net35" />
+  <package id="managedwifi" version="1.1.0" targetFramework="net35" />
 </packages>
