--- a/src/BugReport/BugReport.csproj
+++ b/src/BugReport/BugReport.csproj
@@ -78,7 +78,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Icon.ico" />
+    <Content Include="Resources\Icon.ico" />
+    <EmbeddedResource Include="Resources\Icon.svg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
