实现LoadingRing的两个模式。
1. 实现LoadingRing的Progress模式和Whirling模式。
2. Bugs fix.

--- a/src/ManagerGUI.WPF/ManagerGUI.WPF.csproj
+++ b/src/ManagerGUI.WPF/ManagerGUI.WPF.csproj
@@ -81,7 +81,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DisconnectionWindow.logic.cs" />
+    <Compile Include="DisconnectionWindow.logic.cs">
+      <DependentUpon>DisconnectionWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DisconnectionWindow.xaml.cs">
       <DependentUpon>DisconnectionWindow.xaml</DependentUpon>
     </Compile>
