--- a/src/ctrllib/ctrllib.csproj
+++ b/src/ctrllib/ctrllib.csproj
@@ -54,6 +54,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -67,9 +68,35 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SamLu\Interop\PenetrationProvider.cs" />
+    <Compile Include="WinForm\IManagerPagePanelContainer.cs" />
+    <Compile Include="WinForm\InfoTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="WinForm\LoginInfoPagePanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="WinForm\LoginInfoPagePanel.Designer.cs">
+      <DependentUpon>LoginInfoPagePanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="WinForm\LogoutInfoPagePanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="WinForm\LogoutInfoPagePanel.Designer.cs">
+      <DependentUpon>LogoutInfoPagePanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="WinForm\ManagerPagePanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="WinForm\ManagerPagePanel.Designer.cs">
+      <DependentUpon>ManagerPagePanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="WinForm\PenetrableForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="WinForm\StatusBar.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="WinForm\StatusBarState.cs" />
     <Compile Include="WPF\CamberLoadingRingCell.cs" />
     <Compile Include="WPF\DataPropertyMetadata.cs" />
     <Compile Include="WPF\LoadingRing.xaml.cs" />
@@ -82,6 +109,20 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="PublicKey.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="WinForm\LoginInfoPagePanel.resx">
+      <DependentUpon>LoginInfoPagePanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WinForm\ManagerPagePanel.resx">
+      <DependentUpon>ManagerPagePanel.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\wlanedumain\wlanedumain.csproj">
+      <Project>{39fbcee5-88d6-481f-86b0-c7fd266378c1}</Project>
+      <Name>wlanedumain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
