--- a/src/wlanedumain/wlanedumain.csproj
+++ b/src/wlanedumain/wlanedumain.csproj
@@ -54,7 +54,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FetchTemporaryPwdEventSeries.cs" />
     <Compile Include="IManagerPage.cs" />
+    <Compile Include="IManagerPageContainer.cs" />
+    <Compile Include="LoginEventSeries.cs" />
     <Compile Include="Login\ILoginFailedPage.cs" />
     <Compile Include="Login\ILoginForcedPage.cs" />
     <Compile Include="Login\ILoginInfoPage.cs" />
@@ -65,6 +68,7 @@
     <Compile Include="Login\Implementation\LoginingPage.cs" />
     <Compile Include="Login\Implementation\LoginSucceededPage.cs" />
     <Compile Include="Login\LoginInfo.cs" />
+    <Compile Include="LogoutEventSeries.cs" />
     <Compile Include="Logout\ILogoutFailedPage.cs" />
     <Compile Include="Logout\ILogoutInfoPage.cs" />
     <Compile Include="Logout\ILogoutingPage.cs" />
@@ -74,6 +78,7 @@
     <Compile Include="Logout\Implementation\LogoutingPage.cs" />
     <Compile Include="Logout\Implementation\LogoutSucceededPage.cs" />
     <Compile Include="ManagerPage.cs" />
+    <Compile Include="ManagerPageType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\ThisAssembly.cs" />
     <Compile Include="ErrorHandleHelper.cs" />
