--- a/src/BugReport/BugReport.csproj
+++ b/src/BugReport/BugReport.csproj
@@ -33,6 +33,7 @@
   <PropertyGroup>
     <ApplicationIcon>Resources\Icon.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="CommandLineInfo.Core">
       <HintPath>..\..\static\CommandLineInfo.Core.dll</HintPath>
