--- a/src/ManagerGUI.WinForm/packages.config
+++ b/src/ManagerGUI.WinForm/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="HtmlAgilityPack" version="1.6.7" targetFramework="net35" />
-  <package id="managedwifi" version="1.1.0" targetFramework="net35" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net35" />
 </packages>
