调整类库结构
1. 拆分出Wlan_edu_Manager.Implementation.dll。
2. 添加了WinForm启动器的预览截图。

--- a/src/Logout/Logout.csproj
+++ b/src/Logout/Logout.csproj
@@ -68,6 +68,10 @@
       <Project>{39fbcee5-88d6-481f-86b0-c7fd266378c1}</Project>
       <Name>wlanedumain</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Wlan_edu_Manager.Implementation\Wlan_edu_Manager.Implementation.csproj">
+      <Project>{c0670ede-41b6-42ed-9090-7ebab4e5e5c1}</Project>
+      <Name>Wlan_edu_Manager.Implementation</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
