美化ManagerGUI.WinForm用户体验。
1. 添加“退出”托盘图标菜单项。
2. 修复右键点击托盘图标使主窗口显示的问题。
3. 添加退出时询问是否下线的功能。
4. 调整UAC。
5. 修改IManagerPage接口。
6. 修改错误报告格式。

--- a/src/ManagerGUI.WinForm/ManagerGUI.WinForm.csproj
+++ b/src/ManagerGUI.WinForm/ManagerGUI.WinForm.csproj
@@ -155,6 +155,12 @@
   <ItemGroup>
     <None Include="Resources\settings.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\exit.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\exit.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>if not exist "$(SolutionDir)..\bin\" (md "$(SolutionDir)..\bin\")
