--- a/src/ctrllib/ctrllib.csproj
+++ b/src/ctrllib/ctrllib.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\ThisAssembly.cs" />
     <Compile Include="SamLu\Interop\PenetrationProvider.cs" />
     <Compile Include="WinForm\IManagerPagePanelContainer.cs" />
     <Compile Include="WinForm\InfoTextBox.cs">
